--- a/application/application/blog/css/main.scss
+++ b/application/application/blog/css/main.scss
@@ -1,6 +1,7 @@
 
 //Variable
-$colour_menu: rgb(066, 121, 206);
+$colour_menu       : rgb(066, 121, 206);
+$colour_menu_active: rgb(096, 156, 236);
 
 //Internal
 @import '../../../src/css/main';
