--- a/application/src/css/styles/tags.scss
+++ b/application/src/css/styles/tags.scss
@@ -1,8 +1,18 @@
-
 .tag {
-    background-color: $colour_tag_back;
-    color           : $colour_tag_text;
+    background-color: $colour_tip;
+    color           : $colour_tip_text;
     font-size       : 12px;
     font-weight     : normal;
     padding         : 04px 06px;
+}
+
+.tip {
+    background-color: $colour_tip;
+    border          : 01px solid $colour_tip_text;
+    color           : $colour_tip_text;
+    font-size       : 13px;
+    font-weight     : bold;
+    text-align      : justify;
+    text-justify    : inter-word;
+    padding         : 12px;
 }
