--- a/application/src/css/main.scss
+++ b/application/src/css/main.scss
@@ -24,11 +24,14 @@ $colour_var_text        : rgb(066, 121, 206) !default;
 $colour_highlight       : rgb(236, 236, 236) !default;
 $colour_link            : rgb(096, 156, 236) !default;
 $colour_link_hover      : rgb(066, 121, 206) !default;
-$colour_tip_border      : rgb(096, 156, 236) !default;
-$colour_tip_back        : rgb(221, 231, 251) !default;
+
+$colour_tip             : rgb(221, 231, 251) !default;
 $colour_tip_text        : rgb(096, 156, 236) !default;
-$colour_tag_back        : rgb(226, 236, 246) !default;
-$colour_tag_text        : rgb(066, 121, 206) !default;
+$colour_tag             : rgb(221, 231, 251) !default;
+$colour_tag_text        : rgb(096, 156, 236) !default;
+$colour_btn             : rgb(221, 231, 251) !default;
+$colour_btn_text        : rgb(096, 156, 236) !default;
+
 $colour_label           : rgb(081, 081, 081) !default;
 $colour_input           : rgb(246, 246, 246) !default;
 $colour_input_text      : rgb(051, 051, 051) !default;
