Fixed tips and improved CSS

--- a/application/src/css/styles/canvas.scss
+++ b/application/src/css/styles/canvas.scss
@@ -1,6 +1,6 @@
 #application-container {
-    background   : $colour_canvas;
-    width        : 100%;
-    cursor       : crosshair !important;
-    margin       : 00px;
+    background-color: rgb(001, 001, 001);
+    width           : 100%;
+    cursor          : crosshair !important;
+    margin          : 00px;
 }
