--- a/application/src/css/styles/tags.scss
+++ b/application/src/css/styles/tags.scss
@@ -1,15 +1,16 @@
 .tag {
-    background-color: $colour_tip;
-    color           : $colour_tip_text;
+    background-color: $colour_primary;
+    border          : 01px solid $colour_primary_text;
+    color           : $colour_primary_text;
     font-size       : 12px;
     font-weight     : normal;
     padding         : 04px 06px;
 }
 
 .tip {
-    background-color: $colour_tip;
-    border          : 01px solid $colour_tip_text;
-    color           : $colour_tip_text;
+    background-color: $colour_primary;
+    border          : 01px solid $colour_primary_text;
+    color           : $colour_primary_text;
     font-size       : 13px;
     font-weight     : bold;
     text-align      : justify;
