--- a/application/src/css/styles/tables.scss
+++ b/application/src/css/styles/tables.scss
@@ -1,27 +1,26 @@
-.table-database {
-    font-family    : arial, sans-serif;
+table {
     width          : 100%;
     border-collapse: collapse;
     table-layout   : auto;
 }
 
-.table-database td,
-.table-database th {
+table td,
+table th {
     border    : 1px solid $colour_border;
     text-align: left;
     padding   : 08px;
 }
 
-.table-database th {
-    border-bottom: 2px solid $colour_table;
+table th {
+    border-bottom: 2px solid $colour_primary_text;
 }
 
-.table-database tr:hover td {
-    background-color: $colour_table_accent;
-    color           : $colour_menu;
+table tr:hover td {
+    background-color: $colour_primary;
+    color           : $colour_primary_text;
     cursor          : pointer;
 }
 
-.table-database tr:nth-child(even) {
-    background-color: rgb(246, 246, 246);
+table tr:nth-child(even) {
+    background-color: $colour_accent;
 }
