--- a/application/src/css/styles/page.scss
+++ b/application/src/css/styles/page.scss
@@ -4,13 +4,13 @@
 }
 
 #page.one-column {
-    grid-template-columns: 01fr;
+    grid-template-columns: minmax(0, 1fr);
     grid-template-areas  : "page";
     margin               : 32px 020% 32px 020%;
 }
 
 #page.two-column {
-    grid-template-columns: 01fr 256px;
+    grid-template-columns: minmax(0, 1fr) minmax(0px, 256px);
     grid-template-areas  : "page side";
     margin               : 32px 020% 32px 020%;
 }
