--- a/application/src/css/styles/cards.scss
+++ b/application/src/css/styles/cards.scss
@@ -6,3 +6,9 @@
 .card.active .title {
     color: $colour_link_hover;
 }
+
+.card p {
+    text-overflow: ellipsis;
+    overflow     : hidden;
+    white-space  : nowrap;
+}
