Added author details to articles

--- a/application/src/css/styles/cells.scss
+++ b/application/src/css/styles/cells.scss
@@ -8,5 +8,5 @@
 
 .cell {
     background-color: $colour_cell;
-    border          : 01px solid $colour_border;
+    border          : 01px solid $colour_cell_border;
 }
