--- a/application/src/css/styles/padding.scss
+++ b/application/src/css/styles/padding.scss
@@ -1,25 +1,25 @@
 .p-32 {
-    padding: 32px;
+    padding: 32px !important;
 }
 
 .p-16 {
-    padding: 16px;
+    padding: 16px !important;
 }
 
 .p-08 {
-    padding: 08px;
+    padding: 08px !important;
 }
 
 .p-04 {
-    padding: 04px;
+    padding: 04px !important;
 }
 
 .py-0 {
-    padding-top: 00px;
-    padding-bottom: 00px;
+    padding-top   : 00px !important;
+    padding-bottom: 00px !important;
 }
 
 .px-0 {
-    padding-right: 00px;
-    padding-left: 00px;
+    padding-right: 00px !important;
+    padding-left : 00px !important;
 }
