--- a/application/application/blog/css/styles/headings.scss
+++ b/application/application/blog/css/styles/headings.scss
@@ -1,17 +1,17 @@
-body {
+.article {
     counter-reset: h2counter;
 }
 
-.blog h2 {
+.article h2 {
     counter-reset: h3counter;
 }
 
-.blog h2:before {
+.article h2:before {
     content          : counter(h2counter) ".\0000a0\0000a0";
     counter-increment: h2counter;
 }
 
-.blog h3:before {
+.article h3:before {
     content          : counter(h2counter) "." counter(h3counter) ".\0000a0\0000a0";
     counter-increment: h3counter;
 }
