--- a/application/src/css/styles/highlight.scss
+++ b/application/src/css/styles/highlight.scss
@@ -24,3 +24,16 @@ code.hljs {
     background-color: $colour_code;
     padding         : 16px;
 }
+
+pre.diff code {
+    display: block;
+    padding: 00px;
+}
+
+pre.diff code.old {
+    background-color: rgb(251, 201, 201);
+}
+
+pre.diff code.new {
+    background-color: rgb(201, 251, 201);
+}
