--- a/application/src/css/styles/page.scss
+++ b/application/src/css/styles/page.scss
@@ -3,7 +3,8 @@
     grid-area: body;
 }
 
-#page.one-column {
+#page.one-column,
+#page.one-column-no-cell {
     grid-template-columns: minmax(0, 1fr);
     grid-template-areas  : "page";
     margin               : 32px 020% 32px 020%;
@@ -17,6 +18,7 @@
 
 @media screen and (max-width: 1024px) {
     #page.one-column,
+    #page.one-column-no-cell,
     #page.two-column {
         margin: 16px;
     }
@@ -24,6 +26,7 @@
 
 @media screen and (max-width: 640px) {
     #page.one-column,
+    #page.one-column-no-cell,
     #page.two-column {
         grid-template-columns: 01fr;
         grid-template-areas  : "page" "side";
