--- a/application/src/css/styles/tags.scss
+++ b/application/src/css/styles/tags.scss
@@ -1,6 +1,6 @@
 .tag {
     background-color: $colour_primary;
-    border          : 01px solid $colour_primary_text;
+    border-radius   : 02px;
     color           : $colour_primary_text;
     font-size       : 12px;
     font-weight     : normal;
