--- a/application/src/css/styles/text-and-fonts.scss
+++ b/application/src/css/styles/text-and-fonts.scss
@@ -1,22 +1,32 @@
 h1 {
-    color      : $colour_h1;
-    font-size  : 32px;
-    font-weight: bold;
-    line-height: 40px;
+    border-bottom: 1px solid $colour_border;
+    color        : $colour_h1;
+    font-size    : 32px;
+    font-weight  : bold;
+    line-height  : 56px;
 }
 
 h2 {
-    color      : $colour_h2;
-    font-size  : 20px;
-    font-weight: bold;
-    line-height: 32px;
+    border-bottom: 1px solid $colour_border;
+    color        : $colour_h2;
+    font-size    : 16px;
+    font-weight  : bold;
+    line-height  : 40px;
 }
 
 h3 {
-    color      : $colour_h3;
-    font-size  : 16px;
+    border-bottom: 1px solid $colour_border;
+    color        : $colour_h3;
+    font-size    : 16px;
+    font-weight  : bold;
+    line-height  : 32px;
+}
+
+h4 {
+    color      : $colour_h4;
+    font-size  : 14px;
     font-weight: bold;
-    line-height: 22px;
+    line-height: 16px;
 }
 
 p,
