--- a/application/src/css/styles/application.scss
+++ b/application/src/css/styles/application.scss
@@ -1,7 +1,8 @@
 * {
-    position: relative;
-    margin  : 00px;
-    padding : 00px;
+    border-radius: 00px;
+    position     : relative;
+    margin       : 00px;
+    padding      : 00px;
 }
 
 html {
