--- a/application/src/css/styles/cook.scss
+++ b/application/src/css/styles/cook.scss
@@ -1,5 +1,6 @@
 #cook {
     background-color: $colour_cook;
+    border-radius   : 00px;
     display         : none;
     grid-area       : cook;
 }
