--- a/application/src/css/styles/forms.scss
+++ b/application/src/css/styles/forms.scss
@@ -1,11 +1,10 @@
 #submit-button {
     background-color: $colour_primary;
-    border          : 01px solid $colour_primary_text;
     color           : $colour_primary_text;
     text-align      : center;
     font-size       : 13px;
     font-weight     : bold;
-    padding         : 04px;
+    padding         : 08px;
     cursor          : pointer;
 }
 
@@ -13,8 +12,8 @@
 .form-group select,
 .form-group textarea {
     background-color: $colour_accent;
-    border          : 01px solid $colour_border;
-    color           : $colour_text;
+    border          : none;
+    color           : $colour_p;
     font-size       : 13px;
-    padding         : 04px;
+    padding         : 08px;
 }
