--- a/application/src/css/styles/tags.scss
+++ b/application/src/css/styles/tags.scss
@@ -1,8 +1,8 @@
 .tag {
-    background-color: $colour_primary;
+    background-color: $colour_tag_blue;
     color           : $colour_primary_text;
-    font-size       : 12px;
-    font-weight     : normal;
+    font-size       : 11px;
+    font-weight     : bold;
     padding         : 04px 06px;
 }
 
